# apt-remote

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
assets/: install.tape  update.tape  upgrade.tape
src/: get.rs  install.rs  main.rs  set.rs  ssh.rs  update.rs  upgrade.rs  uri.rs
src/commands/: clear.rs  get.rs  install.rs  mod.rs  set.rs  update.rs
